# peerclawd

./: CLAUDE.md  Cargo.toml  PEERCLAWD-TOKEN-ECONOMY.md  README.md
docs/: AGENTS.md  ARCHITECTURE.md  P2P_PROTOCOL.md  QUICKSTART.md  SECURITY.md  TOKENS.md
examples/agents/: coder.toml  data-analyst.toml  monitor.toml  researcher.toml  telegram-bot.toml
scripts/: run_agents.sh
src/: bootstrap.rs  lib.rs  main.rs  node.rs  runtime.rs
src/channel/: mod.rs  state.rs
src/channels/: webhook.rs
src/cli/: agent.rs  chat.rs  doctor.rs  job.rs  mod.rs  models.rs  network.rs  peers.rs  run.rs  serve.rs  skill.rs  start.rs  test.rs  tool.rs  vector.rs  wallet.rs
src/config/: mod.rs
src/db/: mod.rs
src/executor/: mod.rs  remote.rs  task.rs
src/identity/: mod.rs
src/inference/: batch.rs  distribution.rs  gguf.rs  mod.rs  model.rs
src/job/: bid.rs  execution.rs  mod.rs  network.rs  pricing.rs  request.rs
src/messaging/: channel.rs  mod.rs  registry.rs
src/p2p/: behaviour.rs  mod.rs
src/proxy/: handler.rs  mod.rs  payment.rs
src/routines/: heartbeat.rs
src/safety/: mod.rs
src/skills/: mod.rs  parser.rs  registry.rs  selector.rs
src/swarm/: agent.rs  manager.rs
src/tools/: mod.rs  registry.rs  tool.rs
src/tools/builtin/: file.rs  http.rs  memory.rs  p2p.rs  shell.rs
src/vector/: embeddings.rs  mod.rs
src/wallet/: balance.rs  escrow.rs  mod.rs  transaction.rs
src/wasm/: fuel.rs  host.rs  mod.rs  sandbox.rs
src/web/: chat.html  dashboard.html  mod.rs  openai.rs
src/workspace/: files.rs  identity.rs
